Timing of integration tests improved